--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center">
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
       <h1>Erick Bernardo</h1>
-      <p>I'm <span class="typed" data-typed-items="Data Analyst, Data Scientist"></span></p>
+      <p>I'm <span class="typed" data-typed-items="Data Analyst, Digital Marketing Analytics Specialist, Data Scientist"></span></p>
       <div class="social-links">
         <a href="https://www.linkedin.com/in/erickbernardo10/?locale=en_US" class="linkedin"><i class="bx bxl-linkedin"></i></a>
         <a href="https://github.com/ErickBernardo" class="github"><i class="bx bxl-github"></i></a>
@@ -219,14 +219,14 @@
             </div>
 
             <div class="progress">
-              <span class="skill">Oracle Business Intelligence Enterprise Edition <i class="val">ADVANCED</i></span>
+              <span class="skill">Oracle BI Enterprise Edition <i class="val">ADVANCED</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">Oracle BI Publisher / Oracle Analytics Publisher <i class="val">ADVANCED</i></span>
+              <span class="skill">Oracle BI Publisher / Analytics Publisher <i class="val">ADVANCED</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
@@ -408,9 +408,6 @@
               <p><em>Aeroálcool Tecnologia Ltda, Franca, Brazil </em></p>
               <p><em>Primary responsibilities were: </em></p>
               <ul>
-                <li>Calculating airframe stress loads, flight envelopes and load factors.</li>
-                <li>Fatigue and damage tolerance calculation for metallic and non-metallic structures. </li>
-                <li>Computing analysis of stress loads using MSC Patran/ Nastran software. </li>
                 <li>Analyzing flight test data.</li>
                 <li>Writing technical reports for certification according to ASTM F2245 requirements for light sport aircraft (LSA).</li>
               </ul>
@@ -507,15 +504,100 @@
             <ul id="portfolio-flters">
               <li data-filter="*" class="filter-active">All</li>
               <li data-filter=".filter-ml">Machine learning</li>
-              <li data-filter=".filter-card">Deep learning</li>
-              <li data-filter=".filter-web">Data analysis</li>
+              <!--<li data-filter=".filter-deeplearning">Deep learning</li> -->
+              <li data-filter=".filter-dataanalysis">Data analysis</li>
+              <li data-filter=".filter-optimization ">Optimization </li>
             </ul>
           </div>
         </div>
 
         <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="200">
+         
+           <!-- ======= Telecom Customer Churn Prediction | Machine learning ======= -->
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-ml">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/project-01-telecom-customer-churn.png" class="img-fluid" alt="" width="800" height="529">
+              <div class="portfolio-info">
+                <h4>Telecom Customer Churn Prediction</h4>
+                <p>Predição de rotatividade de clientes em uma operadora de telecomunicações. #PYTHON #CLASSIFICATION</p>
+                <div class="portfolio-links">
+                  <a href="assets/img/portfolio/project-01-telecom-customer-churn.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Telecom Customer Churn Prediction"><i class="bx bx-plus"></i></a>
+                  <a href="portfolio-details-01.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+           <!-- ======= Multidisciplinary and multiobjective optimization applied to sailplane conceptual design. ======= -->
+
+           <div class="col-lg-4 col-md-6 portfolio-item filter-optimization">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/project-sailplane.png" class="img-fluid" alt="" width="800" height="529">
+              <div class="portfolio-info">
+                <h4>Multidisciplinary and multiobjective optimization applied to sailplane conceptual design.</h4>
+                <p>Optimization of  sailplane design using genetic algorithms. #GENETIC ALGORITHMS #OPTIMIZATION #MATLAB</p>
+                <div class="portfolio-links">
+                  <a href="assets/img/portfolio/project-sailplane.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Multidisciplinary and multiobjective optimization applied to sailplane conceptual design."><i class="bx bx-plus"></i></a>
+                  <a href="portfolio-details-02.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+           <!-- ======= Oracle Abalytics | Consumo não ciclico ======= -->
+
+           <div class="col-lg-4 col-md-6 portfolio-item filter-dataanalysis filter-card">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/project-01-telecom-customer-churn.png" class="img-fluid" alt="" width="800" height="529">
+              <div class="portfolio-info">
+                <h4>Telecom Customer Churn Prediction</h4>
+                <p>Predição de rotatividade de clientes em uma operadora de telecomunicações.</p>
+                <div class="portfolio-links">
+                  <a href="assets/img/portfolio/project-01-telecom-customer-churn.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Telecom Customer Churn Prediction"><i class="bx bx-plus"></i></a>
+                  <a href="portfolio-details-01.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+           <!-- ======= Oracle Abalytics | Saúde ======= -->
+
+           <div class="col-lg-4 col-md-6 portfolio-item filter-ml">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/project-01-telecom-customer-churn.png" class="img-fluid" alt="" width="800" height="529">
+              <div class="portfolio-info">
+                <h4>Telecom Customer Churn Prediction</h4>
+                <p>Predição de rotatividade de clientes em uma operadora de telecomunicações.</p>
+                <div class="portfolio-links">
+                  <a href="assets/img/portfolio/project-01-telecom-customer-churn.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Telecom Customer Churn Prediction"><i class="bx bx-plus"></i></a>
+                  <a href="portfolio-details-01.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+          
+
+
+           <!-- ======= Oracle Abalytics | Consumo não ciclico ======= -->
+
+           <div class="col-lg-4 col-md-6 portfolio-item filter-ml">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/project-01-telecom-customer-churn.png" class="img-fluid" alt="" width="800" height="529">
+              <div class="portfolio-info">
+                <h4>Telecom Customer Churn Prediction</h4>
+                <p>Predição de rotatividade de clientes em uma operadora de telecomunicações.</p>
+                <div class="portfolio-links">
+                  <a href="assets/img/portfolio/project-01-telecom-customer-churn.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Telecom Customer Churn Prediction"><i class="bx bx-plus"></i></a>
+                  <a href="portfolio-details-01.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+           <!-- ======= Oracle Abalytics | Saúde ======= -->
+
+           <div class="col-lg-4 col-md-6 portfolio-item filter-ml">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/project-01-telecom-customer-churn.png" class="img-fluid" alt="" width="800" height="529">
               <div class="portfolio-info">
