--- a/portfolio-details-02.html
+++ b/portfolio-details-02.html
@@ -50,7 +50,7 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/project-01-telecom-customer-churn.png" alt="">
+                  <img src="assets/img/portfolio/project-sailplane.png" alt="">
                 </div>
 
               </div>
@@ -62,23 +62,24 @@
             <div class="portfolio-info">
               <h3>Project information</h3>
               <ul>
-                <li><strong>Category</strong>: Machine Learning / Classification</li>
-                <li><strong>Technologies </strong>: Machine Learning, Python, Scikit-learn, Jupyter notebook</li>
-                <li><strong>Project date</strong>: 10 October, 2021</li>
-                <li><strong>Project URL</strong>: <a href="https://erickbernardo.github.io/Project-01-ML-Telecom-Customer-Churn-Pred/">https://erickbernardo/Telecom-Customer-Churn-Pred/</a></li>
+                <li><strong>Category</strong>: Optimization </li>
+                <li><strong>Technologies </strong>: Genetic algorithms, Matlab, XFLR5, Digital DATCOM</li>
+                <li><strong>Project date</strong>: 2017</li>
+                <li><strong>Project URL</strong>: <a href="https://github.com/ErickBernardo/portfolio-project02-Optmizing-sailplane-design-using-genetic-algorithms./blob/1f009c8cec966944ea336209343c4d8521e8ae02/fapesp-repoort-Erick.pdf">https://github.com/ErickBernardo/portfolio/Optmizing-sailplane-design-using-genetic-algorithms/</a></li>
               </ul>
             </div>
             <div class="portfolio-description">
-              <h2>Predicting Customer Churn</h2>
+              <h2>Optmizing sailplane design using genetic algorithms.</h2>
               <p>
-                Customer Churn ou Rotatividade de Clientes refere-se a decisão tomada por clientes em abandonar os serviços prestados por uma empresa, finalizando assim o relacionamento comercial entre ambos. O percentual de rotatividade de clientes complementa o percentual de fidelidade de clientes somando ambos 100%.
+                The design of an aircraft consists of the integration and determination of numerous
+                multidisciplinary characteristics that influence its performance. However, the determination
+                of such characteristics and the fulfillment of the design criteria must be carried out
+                efficiently, allowing cost reduction and satisfaction of aircraft operators. Therefore, this research project aims to implement a computational optimization tool, multidisciplinary and multiobjective that will optimize, through genetic algorithms, the conceptual design of a sailplane, allowing the achivement of efficient cross-country speeds.
               </p>
               <p>
-                Empresas buscam fidelizar seus clientes, principalmente aqueles que trazem os maiores lucros para a empresa. Assim é uma vantagem comercial conseguir prever quais os clientes que possuem a maior probabilidade de encerrarem seus relacionamentos comerciais com a empresa, bem como as características de tais clientes para que políticas internas possam ser planejadas.
+                Key-words: Multidisciplinary and multiobjective optimization; Genetic algorithms; Conceptual
+                design of sailplanes; cross-country speed.
               </p> 
-               <p>
-                Neste projeto implementa-se um modelo preditivo para prever o Customer Churn de uma operadora de telecomunicações, utilizando-se a linguagem Python e um dataset disponível no Kaggle.
-              </p>
             </div>
           </div>
 
