--- a/portfolio-details-02.html
+++ b/portfolio-details-02.html
@@ -65,7 +65,7 @@
                 <li><strong>Category</strong>: Optimization </li>
                 <li><strong>Technologies </strong>: Genetic algorithms, Matlab, XFLR5, Digital DATCOM</li>
                 <li><strong>Project date</strong>: 2017</li>
-                <li><strong>Project URL</strong>: <a href="https://github.com/ErickBernardo/portfolio-project02-Optmizing-sailplane-design-using-genetic-algorithms./blob/1f009c8cec966944ea336209343c4d8521e8ae02/fapesp-repoort-Erick.pdf">https://github.com/ErickBernardo/portfolio/Optmizing-sailplane-design-using-genetic-algorithms/</a></li>
+                <li><strong>Technical report</strong>: <a href="https://1drv.ms/b/s!ArMTTMojFfuPg9lvoz0WTVmX1X296Q?e=2ojw6g">https://github.com/Optmizing-sailplane-design-using-genetic-algorithms/</a></li>
               </ul>
             </div>
             <div class="portfolio-description">
@@ -77,7 +77,7 @@
                 efficiently, allowing cost reduction and satisfaction of aircraft operators. Therefore, this research project aims to implement a computational optimization tool, multidisciplinary and multiobjective that will optimize, through genetic algorithms, the conceptual design of a sailplane, allowing the achivement of efficient cross-country speeds.
               </p>
               <p>
-                Key-words: Multidisciplinary and multiobjective optimization; Genetic algorithms; Conceptual
+                <strong>Key-words: </strong> Multidisciplinary and multiobjective optimization; Genetic algorithms; Conceptual
                 design of sailplanes; cross-country speed.
               </p> 
             </div>
