--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center">
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
       <h1>Erick Bernardo</h1>
-      <p>I'm <span class="typed" data-typed-items="Data Analyst, Digital Marketing Analytics Specialist, Data Scientist"></span></p>
+      <p>I'm <span class="typed" data-typed-items="Data Analyst, Digital Analytics Specialist, Data Scientist"></span></p>
       <div class="social-links">
         <a href="https://www.linkedin.com/in/erickbernardo10/?locale=en_US" class="linkedin"><i class="bx bxl-linkedin"></i></a>
         <a href="https://github.com/ErickBernardo" class="github"><i class="bx bxl-github"></i></a>
@@ -197,14 +197,7 @@
 
           <div class="col-lg-6">
 
-            <div class="progress">
-              <span class="skill">PYTHON <i class="val">ADVANCED</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div>
-
-            <div class="progress">
+             <div class="progress">
               <span class="skill">SQL <i class="val">ADVANCED</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
@@ -239,6 +232,13 @@
                 <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>  
+
+            <div class="progress">
+              <span class="skill">PYTHON <i class="val">GOOD</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>
 
             <div class="progress">
               <span class="skill">MACHINE LEARNING (SCIKIT-LEARN, PYTORCH, CARET) <i class="val">GOOD</i></span>
