--- a/index.html
+++ b/index.html
@@ -507,6 +507,7 @@
               <!--<li data-filter=".filter-deeplearning">Deep learning</li> -->
               <li data-filter=".filter-dataanalysis">Data analysis</li>
               <li data-filter=".filter-optimization ">Optimization </li>
+              <li data-filter=".filter-oraclebi ">Oracle BI Cloud</li>
             </ul>
           </div>
         </div>
@@ -545,38 +546,38 @@
             </div>
           </div>
 
-           <!-- ======= Oracle Abalytics | Consumo não ciclico ======= -->
+           <!-- ======= Oracle Abalytics | Natura ======= -->
 
-           <div class="col-lg-4 col-md-6 portfolio-item filter-dataanalysis filter-card">
+           <div class="col-lg-4 col-md-6 portfolio-item filter-oraclebi filter-card">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/project-01-telecom-customer-churn.png" class="img-fluid" alt="" width="800" height="529">
+              <img src="assets/img/portfolio/plm-natura.png" class="img-fluid" alt="" width="800" height="529">
               <div class="portfolio-info">
-                <h4>Telecom Customer Churn Prediction</h4>
-                <p>Predição de rotatividade de clientes em uma operadora de telecomunicações.</p>
+                <h4>Implementation of Oracle Business Intelligence Cloud at Natura.</h4>
+                <p>Implementation of Oracle Business Intelligence Enterprise Edition (OBIEE) integrated with Oracle Fusion Product Lifecycle Management (PLM) Cloud. #Oracle BI #OBIEE</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/project-01-telecom-customer-churn.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Telecom Customer Churn Prediction"><i class="bx bx-plus"></i></a>
-                  <a href="portfolio-details-01.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                  <a href="assets/img/portfolio/plm-natura.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Oracle Business Intelligence Cloud Implementation at Natura."><i class="bx bx-plus"></i></a>
+                  <a href="portfolio-details-03.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
           </div>
 
-           <!-- ======= Oracle Abalytics | Saúde ======= -->
+           <!-- ======= Oracle Abalytics | Unimed ======= -->
 
-           <div class="col-lg-4 col-md-6 portfolio-item filter-ml">
+           <div class="col-lg-4 col-md-6 portfolio-item filter-oraclebi filter-card">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/project-01-telecom-customer-churn.png" class="img-fluid" alt="" width="800" height="529">
+              <img src="assets/img/portfolio/project-unimed.png" class="img-fluid" alt="" width="800" height="529">
               <div class="portfolio-info">
-                <h4>Telecom Customer Churn Prediction</h4>
-                <p>Predição de rotatividade de clientes em uma operadora de telecomunicações.</p>
+                <h4>Implementation of Oracle Business Inteligence Cloud at Unimed.</h4>
+                <p>Implementation of Oracle Business Intelligence Enterprise Edition (OBIEE) integrated with Oracle Fusion Project Portfolio Management (PPM) Cloud. #Oracle BI #OBIEE</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/project-01-telecom-customer-churn.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Telecom Customer Churn Prediction"><i class="bx bx-plus"></i></a>
-                  <a href="portfolio-details-01.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                  <a href="assets/img/portfolio/project-unimed.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Implementation of Oracle Business Inteligence Cloud at Unimed."><i class="bx bx-plus"></i></a>
+                  <a href="portfolio-details-04.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
           </div>
-          
+         
 
 
            <!-- ======= Oracle Abalytics | Consumo não ciclico ======= -->
