--- a/index.html
+++ b/index.html
@@ -568,7 +568,7 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/project-unimed.png" class="img-fluid" alt="" width="800" height="529">
               <div class="portfolio-info">
-                <h4>Implementation of Oracle Business Inteligence Cloud at Unimed.</h4>
+                <h4>Implementation of Oracle Business Intelligence Cloud at Unimed.</h4>
                 <p>Implementation of Oracle Business Intelligence Enterprise Edition (OBIEE) integrated with Oracle Fusion Project Portfolio Management (PPM) Cloud. #Oracle BI #OBIEE</p>
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/project-unimed.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Implementation of Oracle Business Inteligence Cloud at Unimed."><i class="bx bx-plus"></i></a>
@@ -586,7 +586,7 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/project-01-telecom-customer-churn.png" class="img-fluid" alt="" width="800" height="529">
               <div class="portfolio-info">
-                <h4>Telecom Customer Churn Prediction</h4>
+                <h4>Telecom Customer Churn Prediction TESTE</h4>
                 <p>Predição de rotatividade de clientes em uma operadora de telecomunicações.</p>
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/project-01-telecom-customer-churn.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Telecom Customer Churn Prediction"><i class="bx bx-plus"></i></a>
