--- a/portfolio-details-02.html
+++ b/portfolio-details-02.html
@@ -65,7 +65,7 @@
                 <li><strong>Category</strong>: Optimization </li>
                 <li><strong>Technologies </strong>: Genetic algorithms, Matlab, XFLR5, Digital DATCOM</li>
                 <li><strong>Project date</strong>: 2017</li>
-                <li><strong>Technical report</strong>: <a href="https://1drv.ms/b/s!ArMTTMojFfuPg9lvoz0WTVmX1X296Q?e=2ojw6g">https://github.com/Optmizing-sailplane-design-using-genetic-algorithms/</a></li>
+                <li><strong>Technical report</strong>: <a href="https://1drv.ms/b/s!ArMTTMojFfuPg9lvoz0WTVmX1X296Q?e=2ojw6g" target="_blank"> https://github.com/Optmizing-sailplane-design-using-genetic-algorithms/</a></li>
               </ul>
             </div>
             <div class="portfolio-description">
