--- a/portfolio-details-03.html
+++ b/portfolio-details-03.html
@@ -63,7 +63,7 @@
               <h3>Project information</h3>
               <ul>
                 <li><strong>Category</strong>: Oracle Business Intelligence </li>
-                <li><strong>Technologies </strong>: Oracle Cloud, OBIEE, , Oracle BI Publisher, Dashboards/Reports.</li>
+                <li><strong>Technologies </strong>: Oracle Cloud, OBIEE, SQL, Oracle BI Publisher, Dashboards/Reports.</li>
                 <li><strong>Project date</strong>: 2019-2021</li>
               </ul>
             </div>
