--- a/index.html
+++ b/index.html
@@ -580,17 +580,17 @@
          
 
 
-           <!-- ======= Oracle Abalytics | Consumo não ciclico ======= -->
+           <!-- ======= Airbus DS ======= -->
 
-           <div class="col-lg-4 col-md-6 portfolio-item filter-ml">
+           <div class="col-lg-4 col-md-6 portfolio-item filter-dataanalysis">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/project-01-telecom-customer-churn.png" class="img-fluid" alt="" width="800" height="529">
+              <img src="assets/img/portfolio/airbus-solararray.png" class="img-fluid" alt="" width="800" height="529">
               <div class="portfolio-info">
-                <h4>Telecom Customer Churn Prediction TESTE</h4>
-                <p>Predição de rotatividade de clientes em uma operadora de telecomunicações.</p>
+                <h4> Data analysis for process improvement at Airbus D&S.</h4>
+                <p> KPI management and continuous improvement projects applied to the production line of solar arrays. #LEAN SIX SIGMA #EXCEL/VBA</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/project-01-telecom-customer-churn.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Telecom Customer Churn Prediction"><i class="bx bx-plus"></i></a>
-                  <a href="portfolio-details-01.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                  <a href="assets/img/portfolio/airbus-solararray.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Data analysis for process improvement at Airbus D&S."><i class="bx bx-plus"></i></a>
+                  <a href="portfolio-details-05.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
