--- a/portfolio-details-05.html
+++ b/portfolio-details-05.html
@@ -50,7 +50,7 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/project-sailplane.png" alt="">
+                  <img src="assets/img/portfolio/airbus-solararray.png" alt="">
                 </div>
 
               </div>
@@ -62,13 +62,13 @@
             <div class="portfolio-info">
               <h3>Project information</h3>
               <ul>
-                <li><strong>Category</strong>: Optimization </li>
-                <li><strong>Technologies </strong>: Genetic algorithms, Matlab, XFLR5, Digital DATCOM</li>
-                <li><strong>Project date</strong>: 2017</li>
+                <li><strong>Category</strong>: Data analysis</li>
+                <li><strong>Technologies </strong>: Excel/VBA, Agile, KPI analysis, Lean and Six Sigma</li>
+                <li><strong>Project date</strong>: 2018</li>
                 <li><strong>Technical report:</strong>
                 <div class="button">
                   <button type="action">
-                    <a href="pdf/fapesp-report-Erick.pdf" target="_blank" title="Download">Download</a>
+                    <a href="pdf/AirbusDS-report-Erick.pdf" target="_blank" title="Download">Download</a>
                   </button> 
                 </li>  
                 </div>          
@@ -76,16 +76,18 @@
               </ul>
             </div>
             <div class="portfolio-description">
-              <h2>Optmizing sailplane design using genetic algorithms.</h2>
+              <h2>Data analysis for process improvement at Airbus D&S.</h2>
               <p>
-                The design of an aircraft consists of the integration and determination of numerous
-                multidisciplinary characteristics that influence its performance. However, the determination
-                of such characteristics and the fulfillment of the design criteria must be carried out
-                efficiently, allowing cost reduction and satisfaction of aircraft operators. Therefore, this research project aims to implement a computational optimization tool, multidisciplinary and multiobjective that will optimize, through genetic algorithms, the conceptual design of a sailplane, allowing the achivement of efficient cross-country speeds.
+                The internship completed during 2018 was focused on continuous improvement projects
+                applied to the production line of solar arrays for aerospace purposes. The projects were
+                centered mainly in processes improvement applying lean manufacturing, six sigma and
+                quality tools for evaluation and development of improvements. The main topics of the
+                activities are described in this report but with many results and data omitted due to
+                Airbus Defence and Space intern rules.
               </p>
               <p>
-                <strong>Key-words: </strong> Multidisciplinary and multiobjective optimization; Genetic algorithms; Conceptual
-                design of sailplanes; cross-country speed.
+                <strong>Key-words: </strong> Production line of Solar Arrays; Manufacturing engineering; Continuous
+                improvement.
               </p> 
             </div>
           </div>
