--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
+  <link href="assets/img/favicon_eb.png" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
@@ -60,7 +60,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center">
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
       <h1>Erick Bernardo</h1>
-      <p>I'm <span class="typed" data-typed-items="Data Analyst, Digital Analytics Specialist, Data Scientist"></span></p>
+      <p>I'm <span class="typed" data-typed-items="Data Analyst, Digital Analytics Specialist"></span></p>
       <div class="social-links">
         <a href="https://www.linkedin.com/in/erickbernardo10/?locale=en_US" class="linkedin"><i class="bx bxl-linkedin"></i></a>
         <a href="https://github.com/ErickBernardo" class="github"><i class="bx bxl-github"></i></a>
@@ -76,9 +76,32 @@
     <section id="about" class="about">
       <div class="container" data-aos="fade-up">
 
-        <div class="section-title">
+        <div class="section-title" >
           <h2>About</h2>
-          <p>Business Intelligence & Analytics Consultant. Experience in data analysis and data visualization, web analytics, machine learning, BI, data modeling, ETL processes and SQL development. Experience in BI projects for Oracle Supply Chain Management and Oracle Project Portfolio Management Cloud for the Health and Non-Cyclic Consumer sector. Expertise in continuous improvement projects, data analysis and implementation of processes and key performance indicators (KPIs) at Airbus Defence & Space, Germany.</p>
+          <p align="left">
+            I am passionate about the world of technology, data science and digital marketing. 
+          </p>
+          <br>
+          <P align="left">
+            I am an expert in data analysis and BI, I aim to maximize the sales results of companies, applying a data-driven culture to create conversion funnels aligned with the digital strategy of the business.
+          </P>
+          <br>         
+          <P align="left">
+            I work with data analysis of digital marketing and digital media, social analytics, web analytics, SEM, CRO, tagging (GTM), and Ads management in Google Ads and Facebook Ads. Experience with Google Analytics (GA4), as well as experience in developing dashboards in Data Studio and Power BI using strategic insights and storytelling.
+          </P>
+          <br>
+          <P align="left">
+            I have experience in Business Intelligence (BI) consulting and projects for Oracle Cloud Supply Chain Management and Oracle Project Portfolio Management Cloud for the Health (Unimed) and Non-Cyclic Consumption (Natura) sector. I worked on continuous improvement projects, data analysis, implementation of processes and key performance indicators (KPIs) at Airbus Defense & Space, Germany.
+          </P>
+          <br>
+          <P align="left">
+            I am an aeronautical engineer (USP) and a data science specialist (UTFPR) able to combine analytical skills and digital marketing to create data-driven solutions to optimize results and problem-solving.
+          </P>
+          <br>
+          <p align="left">
+            Knowledge in: SQL, Python/R, Machine Learning, statistics, ETL/ELT, Oracle OBIEE/OTBI/BI Publisher, wordpress + elementor, sales funnel and digital marketing strategies.
+          </p>
+
         </div>
 
         <div class="row">
@@ -86,9 +109,9 @@
             <img src="assets/img/profile-02.png" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content">
-            <h3> Data Analyst &amp; Data Scientist.</h3>
+            <h3> Data Analyst &amp; BI & Digital Analytics.</h3>
             <p class="fst-italic">
-              Business Intelligence & Analytics Consultant
+              Data Analyst | BI & Digital Analytics | Paid ADs Manager / SEM/ CRO | Oracle Cloud Consultant
             </p>
             <div class="row">
               <div class="col-lg-6">
@@ -219,7 +242,7 @@
             </div>
 
             <div class="progress">
-              <span class="skill">Oracle BI Publisher / Analytics Publisher <i class="val">ADVANCED</i></span>
+              <span class="skill">Oracle Analytics Cloud <i class="val">ADVANCED</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
@@ -227,9 +250,9 @@
 
 
             <div class="progress">
-              <span class="skill">DATA ANALYSIS/ VISUALIZATION <i class="val">GOOD</i></span>
+              <span class="skill">DATA ANALYSIS/ VISUALIZATION <i class="val">ADVANCED</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>  
 
@@ -241,7 +264,7 @@
             </div>
 
             <div class="progress">
-              <span class="skill">MACHINE LEARNING (SCIKIT-LEARN, PYTORCH, CARET) <i class="val">GOOD</i></span>
+              <span class="skill">MACHINE LEARNING (SCIKIT-LEARN/CARET) <i class="val">GOOD</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
@@ -275,22 +298,22 @@
 
  
             <div class="progress">
-              <span class="skill">Google Data Studio <i class="val">INTERMEDIATE</i></span>
+              <span class="skill">Google Data Studio <i class="val">GOOD</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>            
 
 
             <div class="progress">
-              <span class="skill">Google Analytics / GTM <i class="val">INTERMEDIATE</i></span>
+              <span class="skill">Google Analytics / GTM <i class="val">GOOD</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div> 
 
             <div class="progress">
-              <span class="skill">ETL <i class="val">INTERMEDIATE</i></span>
+              <span class="skill">ETL / ELT <i class="val">INTERMEDIATE</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
@@ -341,15 +364,19 @@
           <div class="col-lg-6">
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
-              <h4>Digital Marketing Analytics Specialist </h4>
-              <h5>06/2021 - Today</h5>
-              <p><em>My own business, Brazil </em></p>
+              <h4>Data Analyst | BI & Digital Analytics | Paid ADs Manager / SEM/ CRO | Oracle Cloud Consultant</h4>
+              <h5>07/2021 - Today</h5>
+              <p><em>My own business | Self-employed, Brazil </em></p>
               <p><em>Experience with Performance Marketing: </em></p>
               <ul>
-                <li>Turning data into profit for any digital business.</li>
-                <li>Managing digital marketing campaigns.</li>
-                <li>Defining and tracking digital business KPIs. </li>
-                <li>Developing dashboard and reports.</li>
+                <li>Analysis of digital business performance, using Data Analytics tools;</li>
+                <li>Creation of metric maps and measurement plans;</li>
+                <li>Experience in structuring data-driven digital strategies for sales focused on SEM and CRO;</li>
+                <li>Construction of environments for data collection, processing, and analysis, through ETL, BI (Business Intelligence) and Google Analytics (GA4) methods;</li>
+                <li>Management and strategic creation of KPIs and dashboards in Google Data Studio and Power BI;</li>
+                <li>Experience in Digital Launches and Perpetual Products;</li>
+                <li>Practical knowledge in Paid Ads Management and Paid Search Engine Marketer ( Facebook Ads and Google Ads).</li>
+                <li>Development of A/B tests, aiming to increase conversion, improve usability and reduce CPA, CPL and CPC.</li>
               </ul>
             </div>
             <div class="resume-item">
@@ -429,7 +456,7 @@
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
               <h4>  CERTIFICATION IN DATA SCIENCE</h4>
-              <h5>2020 - 2021</h5>
+              <h5>2020 - 2022</h5>
               <p><em>The Federal University of Technology – (UTFPR) , Paraná, Brazil</em></p>
               <ul>
                 <li>Data Analysis with Python and R.</li>
@@ -477,12 +504,12 @@
 
        <div class="button">
            <button type="action">
-             <a href="pdf/ErickBernardo_EN_ptf.pdf" title="Download resume">Download resume (English)</a>
+             <a href="pdf/2022_10_ErickBernardo_en.pdf" title="Download resume">Download resume (English)</a>
            </button> 
        </div>
        <div class="button">
         <button type="action">
-          <a href="pdf/ErickBernardo_PTB_ptf.pdf" title="Download resume">Download resume (Portuguese)</a>
+          <a href="pdf/2022_10_ErickBernardo_pt.pdf" title="Download resume">Download resume (Portuguese)</a>
         </button> 
     </div>
 
@@ -612,7 +639,7 @@
             </div>
           </div>
         -->
-        
+
           <!-- 
           
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
@@ -799,7 +826,7 @@
                 <i class="bx bx-task"></i>
               </div>
               <h4><a href="#contact">Consultancy</a></h4>
-              <p>Providing expert support from a data scientist and researcher to solve business problems, minimizing the chances of failure in the project development.</p>
+              <p>Providing expert support for companies to solve diigital business problems, maximizing the sales results of companies, applying a data-driven culture to create conversion funnels aligned with the digital strategy of the business.</p>
             </div>
           </div>
 
