--- a/index.html
+++ b/index.html
@@ -340,15 +340,12 @@
               </div>
             </div>
 
-            
-
           </div>
 
         </div>
 
       </div>
     </section><!-- End Skills Section -->
-
  
     <!-- ======= Resume Section ======= -->
     <section id="resume" class="resume">
@@ -364,7 +361,7 @@
           <div class="col-lg-6">
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
-              <h4>Data Analyst | BI & Digital Analytics | Paid ADs Manager / SEM/ CRO | Oracle Cloud Consultant</h4>
+              <h4>Data Analyst | BI & Digital Analytics | Paid ADs Manager / SEM/ CRO</h4>
               <h5>07/2021 - Today</h5>
               <p><em>My own business | Self-employed, Brazil </em></p>
               <p><em>Experience with Performance Marketing: </em></p>
